syntax = "proto3";

package interface;
option go_package = "interface/v1";

message WSInputInterface {
    string message_id = 1;
    string message = 2;
    string Code  = 3;
    string language = 4;
    bool format = 5;
    int64 message_type = 6;
}

message WSOutputInterface {
    string output = 1;
    string error = 2;
    string message = 3;
    string message_id = 4;
    int64 status_code = 5;
}

service CompileService {
    rpc CompileSource(WSInputInterface) returns ( stream WSOutputInterface) {}
}